--- a/Modules/Relationships/src/Relationships.Application/Relationships.Application.csproj
+++ b/Modules/Relationships/src/Relationships.Application/Relationships.Application.csproj
@@ -7,6 +7,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.Application.Abstractions\BuildingBlocks.Application.Abstractions.csproj" />
 		<ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.Application\BuildingBlocks.Application.csproj" />
+		<ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.Domain\BuildingBlocks.Domain.csproj" />
 		<ProjectReference Include="..\Relationships.Common\Relationships.Common.csproj" />
 		<ProjectReference Include="..\Relationships.Domain\Relationships.Domain.csproj" />
 	</ItemGroup>
