fix: implement another approach for getting the major version of the backbone

--- a/ConsumerApi/Dockerfile
+++ b/ConsumerApi/Dockerfile
@@ -56,6 +56,7 @@ COPY . .
 RUN dotnet restore "ConsumerApi/ConsumerApi.csproj"
 RUN dotnet publish --configuration Release --output /app/publish --no-restore "ConsumerApi/ConsumerApi.csproj"
 RUN dotnet publish --configuration Release --output /app/publish/health "HealthCheck/HealthCheck.csproj"
+RUN dotnet build --p:Version=5.6.0 "ConsumerApi/ConsumerApi.csproj"
 
 ### Final ####
 FROM mcr.microsoft.com/dotnet/aspnet:8.0.6-jammy-chiseled
