ci: let publish-helm-chart depend on publish-sse-server, publish-identity-deletion-jobs and publish-database-migrator

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -234,6 +234,9 @@ jobs:
       - publish-admin-ui
       - publish-consumer-api
       - publish-event-handler
+      - publish-database-migrator
+      - publish-identity-deletion-jobs
+      - publish-sse-server
     steps:
       - name: Checkout
         uses: actions/checkout@v4
