--- a/Modules/Challenges/test/Challenges.Application.Tests/Challenges.Application.Tests.csproj
+++ b/Modules/Challenges/test/Challenges.Application.Tests/Challenges.Application.Tests.csproj
@@ -8,6 +8,10 @@
         <PackageReference Include="AutoFixture" Version="4.18.0" />
         <PackageReference Include="AutoFixture.Xunit2" Version="4.18.0" />
         <PackageReference Include="FakeItEasy" Version="8.2.0" />
+        <PackageReference Include="GitHubActionsTestLogger" Version="2.4.1">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="xunit" Version="2.6.1" />
