--- a/performance-tests/Identity.Pool.Creator/Identity.Pool.Creator.csproj
+++ b/performance-tests/Identity.Pool.Creator/Identity.Pool.Creator.csproj
@@ -20,6 +20,9 @@
     <None Update="pools.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="pools_light_2.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="pools_light.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
