chore: merge with 'main' and resolve conflicts

--- a/ConsumerApi/appsettings.json
+++ b/ConsumerApi/appsettings.json
@@ -28,6 +28,7 @@
         },
         "Devices": {
             "Application": {
+                "InstanceUrl": "localhost",
                 "Pagination": {
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
@@ -44,6 +45,7 @@
         },
         "Messages": {
             "Application": {
+                "InstanceUrl": "localhost",
                 "MaxNumberOfUnreceivedMessagesFromOneSender": 20,
                 "Pagination": {
                     "DefaultPageSize": 50,
