--- a/Modules/Challenges/src/Challenges.Jobs.Cleanup/Dockerfile
+++ b/Modules/Challenges/src/Challenges.Jobs.Cleanup/Dockerfile
@@ -4,8 +4,11 @@ WORKDIR /src
 COPY . .
 RUN dotnet restore "Challenges.Jobs.Cleanup/Challenges.Jobs.Cleanup.csproj"
 
+ARG VERSION
+
 WORKDIR "/src/Challenges.Jobs.Cleanup"
 RUN dotnet publish --configuration Release --output /app --no-restore
+RUN dotnet build --p:Version=${VERSION} "/src/Challenges.Jobs.Cleanup"
 
 # Run	
 FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine3.18
