chore: Add questions for AdminApi appsettings.override.json

--- a/AdminApi/src/AdminApi/appsettings.override.json
+++ b/AdminApi/src/AdminApi/appsettings.override.json
@@ -1,10 +1,12 @@
 {
     "RunMigrations": true,
     "Authentication": {
-        "ApiKey": "test"
+      "ApiKey": "test"
+      //TODO: Timo (It should be possible to put this into the common file, since it doesn't interfere with the jwt, right?)
     },
     "Cors": {
-        "AllowedOrigins": "http://localhost:8080;https://localhost:8080",
+      "AllowedOrigins": "http://localhost:8080;https://localhost:8080",
+      //TODO: Timo (In the common file, this property is empty, should I put this value into it or don't use the common file at all here?)
         "ExposedHeaders": "",
         "AccessControlAllowCredentials": true
     },
@@ -91,7 +93,6 @@
                 "Backbone": "Debug",
                 "Enmeshed": "Debug",
                 "AdminApi": "Debug",
-
                 "Microsoft.AspNetCore": "Warning"
             }
         },
