fix: Correct path of loadDockerImages.sh for transport tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -299,7 +299,7 @@ jobs:
           merge-multiple: true
 
       - name: Load Docker images
-        run: ./.ci/loadDockerImages.sh
+        run: ./backbone/.ci/loadDockerImages.sh
       
       - name: Run Consumer API & Admin API
         run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.sqlserver.yml up -d --no-build
@@ -362,7 +362,7 @@ jobs:
           merge-multiple: true
 
       - name: Load Docker images
-        run: ./.ci/loadDockerImages.sh
+        run: ./backbone/.ci/loadDockerImages.sh
       
       - name: Run Consumer API & Admin API
         run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.postgres.yml up -d --no-build
