--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -165,6 +165,15 @@ jobs:
 
       - name: Setup Docker
         uses: docker/setup-buildx-action@v3
+        with:
+          driver: docker-container
+      
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup NuGet
         uses: actions/setup-dotnet@v4
