--- a/SseServer/src/SseServer/appsettings.override.json
+++ b/SseServer/src/SseServer/appsettings.override.json
@@ -5,6 +5,9 @@
     },
     "Modules": {
         "Devices": {
+            "Application": {
+                "InstanceUrl": "localhost"
+            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "Postgres",
