--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -193,19 +193,19 @@ jobs:
           file: ${{ matrix.dockerfile }}
           cache-from: type=local,src=/tmp/.buildx-${{ matrix.image }}-cache
           cache-to: type=local,mode=max,dest=/tmp/.buildx-${{ matrix.image }}-cache-new
-          #outputs: type=oci,dest=/tmp/${{ matrix.image }}.tar
-          push: true
-          provenance: true
-          sbom: true
+          outputs: type=docker,dest=/tmp/${{ matrix.image }}.tar
+#          push: true
+#          provenance: true
+#          sbom: true
           tags: ${{ matrix.tag }}
           platforms: ${{ matrix.platforms }}
 
-#      - name: Upload artifact
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: docker-${{ matrix.image }}
-#          path: /tmp/${{ matrix.image }}.tar
-#          retention-days: 1
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-${{ matrix.image }}
+          path: /tmp/${{ matrix.image }}.tar
+          retention-days: 1
       
 #      - name: Create artifact
 #        run: echo ${{ matrix.tag }} > /tmp/${{ matrix.image }}.txt
@@ -247,15 +247,15 @@ jobs:
       - name: Install script dependencies
         run: npm install --prefix ./.ci
         
-#      - name: Download cached Docker images
-#        uses: actions/download-artifact@v4
-#        with:
-#          path: /tmp
-#          pattern: docker-*
-#          merge-multiple: true
-#
-#      - name: Load Docker images
-#        run: ./.ci/loadDockerImages.sh
+      - name: Download cached Docker images
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp
+          pattern: docker-*
+          merge-multiple: true
+
+      - name: Load Docker images
+        run: ./.ci/loadDockerImages.sh
       
       - name: Run integration tests
         run: ./.ci/integrationTest.sqlserver.sh
@@ -295,15 +295,15 @@ jobs:
       - name: Install script dependencies
         run: npm install --prefix ./.ci
 
-#      - name: Download cached Docker images
-#        uses: actions/download-artifact@v4
-#        with:
-#          path: /tmp
-#          pattern: docker-*
-#          merge-multiple: true
-#
-#      - name: Load Docker images
-#        run: ./.ci/loadDockerImages.sh
+      - name: Download cached Docker images
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp
+          pattern: docker-*
+          merge-multiple: true
+
+      - name: Load Docker images
+        run: ./.ci/loadDockerImages.sh
       
       - name: Run integration tests
         run: ./.ci/integrationTest.postgres.sh
@@ -343,15 +343,15 @@ jobs:
           cache: "npm"
           cache-dependency-path: "**/package-lock.json"
 
-#      - name: Download cached Docker images
-#        uses: actions/download-artifact@v4
-#        with:
-#          path: /tmp
-#          pattern: docker-*
-#          merge-multiple: true
-#
-#      - name: Load Docker images
-#        run: ./backbone/.ci/loadDockerImages.sh
+      - name: Download cached Docker images
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp
+          pattern: docker-*
+          merge-multiple: true
+
+      - name: Load Docker images
+        run: ./backbone/.ci/loadDockerImages.sh
       
       - name: Run Consumer API & Admin API
         run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.sqlserver.yml up -d --no-build
@@ -406,15 +406,15 @@ jobs:
           cache: "npm"
           cache-dependency-path: "**/package-lock.json"
 
-#      - name: Download cached Docker images
-#        uses: actions/download-artifact@v4
-#        with:
-#          path: /tmp
-#          pattern: docker-*
-#          merge-multiple: true
-#
-#      - name: Load Docker images
-#        run: ./backbone/.ci/loadDockerImages.sh
+      - name: Download cached Docker images
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp
+          pattern: docker-*
+          merge-multiple: true
+
+      - name: Load Docker images
+        run: ./backbone/.ci/loadDockerImages.sh
       
       - name: Run Consumer API & Admin API
         run: docker compose -f ./backbone/.ci/docker-compose.test.yml -f ./backbone/.ci/docker-compose.test.postgres.yml up -d --no-build
