--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -197,8 +197,8 @@ jobs:
 #          push: true
 #          provenance: true
 #          sbom: true
-          tags: ${{ matrix.tag }}
-          platforms: ${{ matrix.platforms }}
+#          tags: ${{ matrix.tag }}
+#          platforms: ${{ matrix.platforms }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
